# DeepResearchX

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTIC_METADATA_IMPLEMENTATION_PLAN.md  GAP_ANALYSIS_REPORT.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SYNOPSIS.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  evaluation.yaml
ci/evaluation/: EVALUATION_ANALYSIS.md  EVALUATION_REPORT.md  __init__.py  api_health.json  conftest.py  curated_test_cases.yaml  dataset_collector.py  deepeval_config.py  dependency_status.json  docker_status.json  env_validation.json  eval_report.json  eval_results.json  feedback_store.py  metadata_assertions.py  metrics_results.json  report_generator.py  run_evaluation.py  smoke_test_results.json  test_agent_evals.py  test_circuit_breaker.py  test_metadata_compliance.py
deployment/: Dockerfile.api  Dockerfile.worker  docker-compose.prod.yaml  docker-compose.yaml  init.sql  nginx.conf  worker-entrypoint.sh
docs/: API_FIX_PLAN.md  ARCHITECTURE.md  BUGFIX_IMPLEMENTATION_PLAN.md  EVALUATION_PLAN.md  EVALUATION_RERUN_PLAN.md  FRONTEND_USAGE.md  LLD.md  PHOENIX_FIX_PLAN.md
frontend/: index.html
frontend/css/: chat.css  code.css  connection.css  dag.css  graph.css  report.css  skeleton.css  styles.css  variables.css
frontend/js/: api.js  chat.js  config-ui.js  connection.js  dag.js  graph.js  keyboard.js  main.js  markdown.js  persistence.js  reconnect-ui.js  renderer.js  report.js  sse.js  state.js  touch.js
schemas/: agent_events.json  agent_manifest.json  postgres_schema.sql  redis_keys.md
src/: __init__.py  config.py  worker.py
src/agents/: __init__.py  base.py  critic.py  planner.py  reader.py  reporter.py  searcher.py  synthesizer.py
src/api/: __init__.py  dependencies.py  main.py  models.py  replay_routes.py  routes.py  streaming.py
src/db/: __init__.py  connection.py
src/metadata/: __init__.py  agent_selector.py  circuit_breaker.py  context.py  context_store.py  health_checker.py  manifest.py  routing.py
src/middleware/: __init__.py  domain_validator.py  policy_firewall.py
src/models/: __init__.py  knowledge.py
src/observability/: __init__.py  metrics.py  phoenix.py  tracing.py
src/orchestrator/: __init__.py  budget.py  checkpointer.py  nodes.py  (+3 more)
(+26 files in other folders)
